--- a/_data/publications_book-chapters.yml
+++ b/_data/publications_book-chapters.yml
@@ -1,87 +1,3 @@
-- editors: Andres N, Steeb N, Badoux A, Hegg C, eds
-  authorship: Five chapters in
-  year: 2021
-  booktitle: Extremhochwasser an der Aare. Hauptbericht Projekt EXAR. Methodik und Resultate
-  publisher: Eidgenössische Forschungsanstalt für Wald, Schnee und Landschaft (WSL)
-  place: Birmensdorf
-  series: WSL Berichte
-  volume: 104
-  issn: 2296-3456
-  notes: "See Chapters 5 (Entwicklung hydrometeorologischer Grundlagen), 10 (Resultate der hydrometeorologischen Grundlagen), 17 (Diskussion der Unsicherheiten und Limitationen), 18 (Schlussfolgerungen) and 19 (Ausblick)"
-  pdf: https://www.wsl.ch/de/publikationen/extremhochwasser-an-der-aare-hauptbericht.html
-  pdf_external: Y
-  new: Y
-
-# - authors: Andres N, Badoux A, Dang V, Hingray B, Müller M, Pfäffli M, Schwab S, Sutter A, Viviroli D, Hegg C
-#   year: 2021
-#   title: Diskussion der Unsicherheiten und Limitationen
-#   editors: Andres N, Steeb N, Badoux A, Hegg C
-#   booktitle: Extremhochwasser an der Aare. Hauptbericht Projekt EXAR, Methodik und Resultate
-#   series: WSL Berichte
-#   volume: 104
-#   publisher: WSL
-#   place: Birmensdorf
-#   pages: 222–226
-#   pdf: https://www.wsl.ch/de/publikationen/extremhochwasser-an-der-aare-hauptbericht.html
-#   pdf_external: Y
-#   new: Y
-#
-# - authors: Andres N, Badoux A, Dang V, Müller M, Pfäffli M, Schwab S, Sutter A, Viviroli D, Hegg C
-#   year: 2021
-#   title: Schlussfolgerungen
-#   editors: Andres N, Steeb N, Badoux A, Hegg C
-#   booktitle: Extremhochwasser an der Aare. Hauptbericht Projekt EXAR, Methodik und Resultate
-#   series: WSL Berichte
-#   volume: 104
-#   publisher: WSL
-#   place: Birmensdorf
-#   pages: 227-232
-#   pdf: https://www.wsl.ch/de/publikationen/extremhochwasser-an-der-aare-hauptbericht.html
-#   pdf_external: Y
-#   new: Y
-#
-# - authors: Andres N, Badoux A, Dang V, Müller M, Pfäffli M, Schwab S, Sutter A, Viviroli D, Hegg C
-#   year: 2021
-#   title: Ausblick
-#   editors: Andres N, Steeb N, Badoux A, Hegg C
-#   booktitle: Extremhochwasser an der Aare. Hauptbericht Projekt EXAR, Methodik und Resultate
-#   series: WSL Berichte
-#   volume: 104
-#   publisher: WSL
-#   place: Birmensdorf
-#   pages: 233-235
-#   pdf: https://www.wsl.ch/de/publikationen/extremhochwasser-an-der-aare-hauptbericht.html
-#   pdf_external: Y
-#   new: Y
-#
-# - authors: Baer P, Kauzlaric M, Viviroli D, Whealton C
-#   year: 2021
-#   title: Resultate der hydrometeorologischen Grundlagen
-#   editors: Andres N, Steeb N, Badoux A, Hegg C
-#   booktitle: Extremhochwasser an der Aare. Hauptbericht Projekt EXAR, Methodik und Resultate
-#   series: WSL Berichte
-#   volume: 104
-#   publisher: WSL
-#   place: Birmensdorf
-#   pages: 75–86
-#   pdf: https://www.wsl.ch/de/publikationen/extremhochwasser-an-der-aare-hauptbericht.html
-#   pdf_external: Y
-#   new: Y
-#
-# - authors: Kauzlaric M, Nicolet G, Viviroli D
-#   year: 2021
-#   title: Entwicklung hydrometeorologischer Grundlagen
-#   editors: Andres N, Steeb N, Badoux A, Hegg C
-#   booktitle: Extremhochwasser an der Aare. Hauptbericht Projekt EXAR, Methodik und Resultate
-#   series: WSL Berichte
-#   volume: 104
-#   publisher: WSL
-#   place: Birmensdorf
-#   pages: 31–40
-#   pdf: https://www.wsl.ch/de/publikationen/extremhochwasser-an-der-aare-hauptbericht.html
-#   pdf_external: Y
-#   new: Y
-
 - authors: Seibert J, Jenicek M, Huss N, Ewen T, Viviroli D
   year: 2021
   title: Snow and Ice in the Hydrosphere
@@ -92,6 +8,90 @@
   chapterdoi: 10.1016/B978-0-12-817129-5.00010-X
   place: Amsterdam
   pages: 93–135
+  new: Y
+
+# - editors: Andres N, Steeb N, Badoux A, Hegg C, eds
+#   authorship: Five chapters in
+#   year: 2021
+#   booktitle: Extremhochwasser an der Aare. Hauptbericht Projekt EXAR. Methodik und Resultate
+#   publisher: Eidgenössische Forschungsanstalt für Wald, Schnee und Landschaft (WSL)
+#   place: Birmensdorf
+#   series: WSL Berichte
+#   volume: 104
+#   issn: 2296-3456
+#   notes: "See Chapters 5 (Entwicklung hydrometeorologischer Grundlagen), 10 (Resultate der hydrometeorologischen Grundlagen), 17 (Diskussion der Unsicherheiten und Limitationen), 18 (Schlussfolgerungen) and 19 (Ausblick)"
+#   pdf: https://www.wsl.ch/de/publikationen/extremhochwasser-an-der-aare-hauptbericht.html
+#   pdf_external: Y
+#   new: Y
+
+- authors: Andres N, Badoux A, Dang V, Hingray B, Müller M, Pfäffli M, Schwab S, Sutter A, Viviroli D, Hegg C
+  year: 2021
+  title: Diskussion der Unsicherheiten und Limitationen
+  editors: Andres N, Steeb N, Badoux A, Hegg C
+  booktitle: Extremhochwasser an der Aare. Hauptbericht Projekt EXAR, Methodik und Resultate
+  series: WSL Berichte
+  volume: 104
+  publisher: WSL
+  place: Birmensdorf
+  pages: 222–226
+  pdf: https://www.wsl.ch/de/publikationen/extremhochwasser-an-der-aare-hauptbericht.html
+  pdf_external: Y
+  new: Y
+
+- authors: Andres N, Badoux A, Dang V, Müller M, Pfäffli M, Schwab S, Sutter A, Viviroli D, Hegg C
+  year: 2021
+  title: Schlussfolgerungen
+  editors: Andres N, Steeb N, Badoux A, Hegg C
+  booktitle: Extremhochwasser an der Aare. Hauptbericht Projekt EXAR, Methodik und Resultate
+  series: WSL Berichte
+  volume: 104
+  publisher: WSL
+  place: Birmensdorf
+  pages: 227-232
+  pdf: https://www.wsl.ch/de/publikationen/extremhochwasser-an-der-aare-hauptbericht.html
+  pdf_external: Y
+  new: Y
+
+- authors: Andres N, Badoux A, Dang V, Müller M, Pfäffli M, Schwab S, Sutter A, Viviroli D, Hegg C
+  year: 2021
+  title: Ausblick
+  editors: Andres N, Steeb N, Badoux A, Hegg C
+  booktitle: Extremhochwasser an der Aare. Hauptbericht Projekt EXAR, Methodik und Resultate
+  series: WSL Berichte
+  volume: 104
+  publisher: WSL
+  place: Birmensdorf
+  pages: 233-235
+  pdf: https://www.wsl.ch/de/publikationen/extremhochwasser-an-der-aare-hauptbericht.html
+  pdf_external: Y
+  new: Y
+
+- authors: Baer P, Kauzlaric M, Viviroli D, Whealton C
+  year: 2021
+  title: Resultate der hydrometeorologischen Grundlagen
+  editors: Andres N, Steeb N, Badoux A, Hegg C
+  booktitle: Extremhochwasser an der Aare. Hauptbericht Projekt EXAR, Methodik und Resultate
+  series: WSL Berichte
+  volume: 104
+  publisher: WSL
+  place: Birmensdorf
+  pages: 75–86
+  pdf: https://www.wsl.ch/de/publikationen/extremhochwasser-an-der-aare-hauptbericht.html
+  pdf_external: Y
+  new: Y
+
+- authors: Kauzlaric M, Nicolet G, Viviroli D
+  year: 2021
+  title: Entwicklung hydrometeorologischer Grundlagen
+  editors: Andres N, Steeb N, Badoux A, Hegg C
+  booktitle: Extremhochwasser an der Aare. Hauptbericht Projekt EXAR, Methodik und Resultate
+  series: WSL Berichte
+  volume: 104
+  publisher: WSL
+  place: Birmensdorf
+  pages: 31–40
+  pdf: https://www.wsl.ch/de/publikationen/extremhochwasser-an-der-aare-hauptbericht.html
+  pdf_external: Y
   new: Y
 
 - authors: Martius O, Viviroli D, Rössler O, Zischg A, Röthlisberger V, Aemisegger F, Schulte L, Stuber M, Peña JC, Ruiz-Villanueva V, Molnar P
@@ -118,10 +118,14 @@
   pdf: https://report.ipcc.ch/srocc/pdf/SROCC_FinalDraft_Chapter2.pdf
   pdf_text: Download chapter pdf
   pdf_external: Y
-  link: https://www.ipcc.ch/srocc/chapter/chapter-2/
-  link_text: Access chapter online
-  link_external: Y
-  #mediacoveragelist: media_2019SROCC
+  links:
+  - url: https://www.ipcc.ch/srocc/chapter/chapter-2/
+    text: Access chapter online
+    link_external: Y
+  # mediacoverage:
+  # - title: Die Zeit
+  #   link: https://www.zeit.de/wissen/umwelt/2019-09/sonderbericht-klimawandel-ipcc-report-ergebnisse-weltklimarat-klimaschutz
+  #   external: Y
 
 - authors: Viviroli D
   year: 2013
