--- a/_data/publications_papers-further.yml
+++ b/_data/publications_papers-further.yml
@@ -4,11 +4,15 @@
   journal: Tiroler Tageszeitung
   volume: "07.09.2019"
   pages: 20
-  link: "https://www.tt.com/panorama/natur/15968928/der-inn-als-internationaler-lebensspender"
-  link_text: Access article online
-  link_external: Y
+  links:
+  - url: "https://www.tt.com/panorama/natur/15968928/der-inn-als-internationaler-lebensspender"
+    text: Access article online
+    external: Y
   pdf: /documents/Viviroli_2019_TT_250.pdf
-  mediacoveragelist: media_2019TT
+  mediacoverage:
+  - title: Österreichischer Rundfunk
+    link: https://oe1.orf.at/programm/20191017/574267/Das-Monatsmagazin
+    external: Y
 
 - authors: Köplin N, Viviroli D, Schädler B, Weingartner R
   year: 2010
