--- a/_data/projects_completed.yml
+++ b/_data/projects_completed.yml
@@ -126,7 +126,7 @@
     external: Y
   - title: Neue Zürcher Zeitung
     link: /documents/Denzler_2009_NZZ.pdf
-  - title: Swiss Radio and Television
+  - title: Schweizer Radio und Fernsehen
     link: https://www.srf.ch/audio/wissenschaftsmagazin/der-klimawandel-beeinflusst-den-wasserhaushalt?partId=10100561
     external: Y
 
