--- a/_data/publications_papers-further.yml
+++ b/_data/publications_papers-further.yml
@@ -11,7 +11,7 @@
   pdf: /documents/Viviroli_2019_TT_250.pdf
   mediacoverage:
   - title: Österreichischer Rundfunk
-    link: https://oe1.orf.at/programm/20191017/574267/Das-Monatsmagazin
+    url: https://oe1.orf.at/programm/20191017/574267/Das-Monatsmagazin
     external: Y
 
 - authors: Köplin N, Viviroli D, Schädler B, Weingartner R
