--- a/_data/publications_authored-monographs.yml
+++ b/_data/publications_authored-monographs.yml
@@ -11,6 +11,7 @@
   publisher: Schweizerische Gesellschaft für Hydrologie und Limnologie (SGHL) und Schweizerische Hydrologische Kommission (CHy) der Akademie der Naturwissenschaften (SCNAT)
   place: Bern
   isbn: 978-3-033-03497-6
+  openaccess: Y
   pdf: https://naturwissenschaften.ch/service/publications/55433-prozessbasierte-hochwasserabschaetzung-fuer-mesoskalige-einzugsgebiete
   pdf_external: Y
   links:
