--- a/_data/publications_papers-peer-reviewed.yml
+++ b/_data/publications_papers-peer-reviewed.yml
@@ -58,7 +58,7 @@
   pages: 4018
   doi: 10.1038/s41467-019-11543-9
   pdf: https://www.nature.com/articles/s41467-019-11543-9.pdf
-  pdf_openaccess: Y
+  openaccess: Y
   pdf_external: Y
 
 - authors: Pool S, Viviroli D, Seibert J
@@ -110,7 +110,7 @@
   doi: 10.1002/2016WR019535
   pdf: https://agupubs.onlinelibrary.wiley.com/doi/epdf/10.1002/2016WR019535
   pdf_external: Y
-  pdf_openaccess: Y
+  openaccess: Y
 
 - authors: Mankin JS, Viviroli D, Mekonnen MM, Hoekstra AY, Horton RM, Smerdon, JE, Diffenbaugh NS
   year: 2017
@@ -121,7 +121,7 @@
   pages: 044007
   doi: 10.1088/1748-9326/aa5efc
   pdf: https://iopscience.iop.org/article/10.1088/1748-9326/aa5efc/pdf
-  pdf_openaccess: Y
+  openaccess: Y
   pdf_external: Y
 
 - authors: Pool S, Viviroli D, Seibert J
@@ -142,8 +142,12 @@
   pages: 034010
   doi: 10.1088/1748-9326/11/3/034010
   pdf: http://iopscience.iop.org/article/10.1088/1748-9326/11/3/034010/pdf
-  pdf_openaccess: Y
+  openaccess: Y
   pdf_external: Y
+  mediacoverage:
+  - title: Press release
+    url: https://www.aalto.fi/en/news/sea-level-rise-threatens-larger-number-of-people-than-earlier-estimated
+    external: Y
 
 - authors: Mankin JS, Viviroli D, Singh D, Hoekstra AY, Diffenbaugh NS
   year: 2015
@@ -154,7 +158,7 @@
   pages: 114016
   doi: 10.1088/1748-9326/10/11/114016
   pdf: http://iopscience.iop.org/article/10.1088/1748-9326/10/11/114016/pdf
-  pdf_openaccess: Y
+  openaccess: Y
   pdf_external: Y
   notes:
   - text: "Featured as one of the journal's 25 'Highlights of 2015'"
@@ -194,7 +198,7 @@
   pages: 7959–7976
   doi: 10.1002/2015WR017326
   pdf: https://agupubs.onlinelibrary.wiley.com/doi/epdf/10.1002/2015WR017326
-  pdf_openaccess: Y
+  openaccess: Y
   pdf_external: Y
 
 - authors: Viviroli D, Seibert J
@@ -227,7 +231,7 @@
   pages: 619–635
   doi: 10.5194/hess-17-619-2013
   pdf: https://www.hydrol-earth-syst-sci.net/17/619/2013/hess-17-619-2013.pdf
-  pdf_openaccess: Y
+  openaccess: Y
   pdf_external: Y
 
 - authors: Viviroli D, Schädler B, Schmocker-Fackel P, Weiler M, Seibert J
@@ -239,7 +243,7 @@
   pages: W05601
   doi: 10.1029/2011WR011690
   pdf: https://agupubs.onlinelibrary.wiley.com/doi/epdf/10.1029/2011WR011690
-  pdf_openaccess: Y
+  openaccess: Y
   pdf_external: Y
 
 - authors: Köplin N, Schädler B, Viviroli D, Weingartner R
@@ -251,7 +255,7 @@
   pages: 2267–2283
   doi: 10.5194/hess-16-2267-2012
   pdf: https://www.hydrol-earth-syst-sci.net/16/2267/2012/hess-16-2267-2012.pdf
-  pdf_openaccess: Y
+  openaccess: Y
   pdf_external: Y
 
 - authors: Viviroli D, Archer DR, Buytaert W, Fowler HJ, Greenwood GB, Hamlet AF, Huang Y, Koboltschnig G, Litaor I, López-Moreno JI, Lorentz S, Schädler B, Schreier H, Schwaiger K, Vuille M, Woods R
@@ -263,7 +267,7 @@
   pages: 471–504
   doi: 10.5194/hess-15-471-2011
   pdf: https://www.hydrol-earth-syst-sci.net/15/471/2011/hess-15-471-2011.pdf
-  pdf_openaccess: Y
+  openaccess: Y
   pdf_external: Y
   notes:
   - text: "Highly cited paper (top 1% in field as to Essential Science Indicators)"
@@ -296,7 +300,7 @@
   pages: W07518
   doi: 10.1029/2010WR009792
   pdf: https://agupubs.onlinelibrary.wiley.com/doi/epdf/10.1029/2010WR009792
-  pdf_openaccess: Y
+  openaccess: Y
   pdf_external: Y
 
 - authors: Viviroli D, Mittelbach H, Gurtz J, Weingartner R
@@ -341,7 +345,7 @@
   pages: W07447
   doi: 10.1029/2006WR005653
   pdf: https://agupubs.onlinelibrary.wiley.com/doi/epdf/10.1029/2006WR005653
-  pdf_openaccess: Y
+  openaccess: Y
   pdf_external: Y
   # mediacoverage:
   # - title: Der Standard
@@ -386,7 +390,7 @@
   pages: 1016–1029
   doi: 10.5194/hess-8-1017-2004
   pdf: http://www.hydrol-earth-syst-sci.net/8/1017/2004/hess-8-1017-2004.pdf
-  pdf_openaccess: Y
+  openaccess: Y
   pdf_external: Y
 
 - authors: Messerli B, Viviroli D, Weingartner R
@@ -407,7 +411,7 @@
   pages: 32–40
   doi: 10.1659/0276-4741(2003)023[0032:ATHSOT]2.0.CO;2
   pdf: https://bioone.org/journalArticle/Download?fullDOI=10.1659%2F0276-4741(2003)023%5B0032%3AATHSOT%5D2.0.CO%3B2
-  pdf_openaccess: Y
+  openaccess: Y
   pdf_external: Y
 
 - authors: Messerli B, Viviroli D, Weingartner R
@@ -419,5 +423,5 @@
   pages: 307
   doi: 10.1659/0276-4741(2001)021[0307:C]2.0.CO;2
   pdf: https://bioone.org/journalArticle/Download?fullDOI=10.1659%2F0276-4741(2001)021%5B0307%3AC%5D2.0.CO%3B2
-  pdf_openaccess: Y
+  openaccess: Y
   pdf_external: Y
