--- a/_data/publications_papers-further.yml
+++ b/_data/publications_papers-further.yml
@@ -22,7 +22,7 @@
   pages: 111–119
   doi: "10.5194/adgeo-27-111-2010"
   pdf: https://www.adv-geosci.net/27/111/2010/
-  pdf_openaccess: Y
+  openaccess: Y
   pdf_external: Y
 
 - authors: Zappa M, Jaun S, Badoux A, Schwanbeck J, Addor N, Liechti K, Roeser I, Walser A, Viviroli D, Vogt S, Gerber M, Trösch J, Weingartner R, Oplatka M, Bezzola GR, Rhyner J
