--- a/_data/publications_project-reports.yml
+++ b/_data/publications_project-reports.yml
@@ -3,6 +3,7 @@
   title: Hochwasserereignisse aus kontinuierlicher Langzeitsimulation zur Überprüfung der Sicherheit der Stauanlagen
   report: Projektschlussbericht im Auftrag des Bundesamts für Energie (BFE)
   institution: Geographisches Institut der Universität Zürich
+  openaccess: Y
   pdf: https://pubdb.bfe.admin.ch/de/publication/download/10451
   pdf_external: Y
   new: Y
@@ -12,6 +13,7 @@
   title: Hydrometeorologische Grundlagen
   report: Detailbericht A Projekt EXAR (Extremhochwasser an der Aare)
   institution: Geographisches Institut der Universität Zürich
+  openaccess: Y
   pdf: https://www.wsl.ch/exar
   pdf_external: Y
   new: Y
@@ -28,6 +30,7 @@
   report: Schlussbericht CCHydro – Modul 4
   institution: Geographisches Institut der Universität Bern
   pdf: "https://www.bafu.admin.ch/dam/bafu/de/dokumente/hydrologie/externe-studien-berichte/klimaaenderung-und-niedrigwasser.pdf.download.pdf/Klima%C3%A4nderung%20und%20Niedrigwasser.pdf"
+  openaccess: Y
   pdf_external: Y
   links:
   - url: "https://www.bafu.admin.ch/bafu/de/home/themen/wasser/publikationen-studien/publikationen-wasser/auswirkungen-klimaaenderung-wasserressourcen-gewaesser.html"
@@ -39,6 +42,7 @@
   title: Klimaänderung und Wasserhaushalt in sensitiven Bilanzierungsgebieten
   report: Schlussbericht CCHydro – Modul 3
   institution: Geographisches Institut der Universität Bern
+  openaccess: Y
   pdf: "https://www.bafu.admin.ch/dam/bafu/de/dokumente/hydrologie/externe-studien-berichte/klimaaenderung-und-wasserhaushalt-in-sensitiven-bilanzierungsgebieten.pdf.download.pdf/Klima%C3%A4nderung%20und%20Wasserhaushalt%20in%20sensitiven%20Bilanzierungsgebieten.pdf"
   pdf_external: Y
   links:
