--- a/_data/projects_completed.yml
+++ b/_data/projects_completed.yml
@@ -227,7 +227,7 @@
   funding:
   - sponsor: Swiss Federal Office for the Environment (FOEN)
   moreinfo:
-  - text: Project report
+  - text: Synthesis report on analyses of 2005 flood in Switzerland
     url: "https://www.bafu.admin.ch/bafu/de/home/themen/naturgefahren/publikationen-studien/publikationen/ereignisanalyse-hochwasser-2005-analyse-von-prozessen-massnahmen-und-gefahrengrundlagen.html"
     external: Y
 
