--- a/_data/publications_conference-proceedings.yml
+++ b/_data/publications_conference-proceedings.yml
@@ -112,7 +112,7 @@
   year: 2004
   title: Mountains – water towers for a thirsty world?
   editors: Herrmann A, ed
-  booktitle: ydrology of Mountain Environments, International conference jointly convened by the International Hydrological Programme (IHP) of UNESCO, the Hydrology and Water Resources Programme (HWRP) of WMO and the Technical University of Braunschweig in Berchtesgaden, D, 27 September – 01 October 2004
+  booktitle: Hydrology of Mountain Environments, International conference jointly convened by the International Hydrological Programme (IHP) of UNESCO, the Hydrology and Water Resources Programme (HWRP) of WMO and the Technical University of Braunschweig in Berchtesgaden, D, 27 September – 01 October 2004
   series: Landschaftsökologie und Umweltforschung
   volume: 47
   publisher: Institut für Geoökologie der Technischen Universität Braunschweig
