--- a/_data/publications_project-reports.yml
+++ b/_data/publications_project-reports.yml
@@ -71,5 +71,6 @@
   title: Potenzialanalyse Kleinwasserkraftwerke. Kraftwerke an Fliessgewässern
   report: Schlussbericht zu einer Studie im Auftrag des Bundesamtes für Energie (BfE), Programm Kleinwasserkraft
   institution:  econcept AG, Zürich; Geographisches Institut der Universität Bern
+  openaccess: Y
   pdf: "https://www.zora.uzh.ch/id/eprint/112001/1/e_wwa_wkr_restwasser/bve_wwa_wkr_restwasser_dokumentat"
   pdf_external: Y
