--- a/_data/publications_datasets.yml
+++ b/_data/publications_datasets.yml
@@ -1,3 +1,11 @@
+- authors: Kummu M, Heino M, Taka M, Varis O, Viviroli D
+  year: 2021
+  title: "Data from: Climate change risks to push one-third of global food production outside Safe Climatic Space"
+  repository: Zenodo Digital Repository
+  doi: doi/10.5281/zenodo.4700860
+  openaccess: Y
+  new: Y
+
 - authors: Viviroli D, Kummu M, Meybeck M, Kallio M, Wada Y
   year: 2020
   title: "Data from: Increasing dependence of lowland populations on mountain water resources"
@@ -8,7 +16,7 @@
 
 - authors: Immerzeel WW, Lutz AF, Andrade M, Bahl A, Biemans H, Bolch T, Hyde S, Brumby S, Davies BJ, Elmore AC, Emmer A, Feng M, Fernández A, Haritashya U, Kargel, JS, Koppes M, Kraaijenbrink PDA, Kulkarni AV, Mayewski P, Nepal S, Pacheco P, Painter TH, Pellicciotti F, Rajaram H, Rupper S, Sinisalo A, Shrestha AB, Viviroli D, Wada Y, Xiao C, Yao T, Baillie JEM
   year: 2019
-  title: "Supplementary data to: Importance and vulnerability of the world's water towers"
+  title: "Data from: Importance and vulnerability of the world's water towers"
   repository: Zenodo Digital Repository
   openaccess: Y
   doi: 10.5281/zenodo.3521932
