--- a/_data/publications_papers-peer-reviewed.yml
+++ b/_data/publications_papers-peer-reviewed.yml
@@ -14,6 +14,12 @@
   - title: press release (Aalto University, Finnish)
     url: https://www.aalto.fi/fi/uutiset/tuore-tutkimus-ilmastonmuutos-uhkaa-jopa-kolmannesta-maailman-ruoantuotannosta
     external: Y
+  - title: The Guardian
+    url: https://www.theguardian.com/environment/2021/may/14/third-of-global-food-production-at-risk-from-climate-crisis
+    external: Y
+  - title: MTV Uutiset
+    url: https://www.mtvuutiset.fi/artikkeli/ilmastonmuutos-uhkaa-kolmasosaa-maailman-ruoantuotannosta-suomi-saattaa-menettaa-havumetsat/8142182?mtv_ref=twb_uutiset_uusimmat#gs.0tc156
+    external: Y
   new: Y
 
 - authors: Viviroli D, Kummu M, Meybeck M, Kallio M, Wada Y
