--- a/_data/publications_datasets.yml
+++ b/_data/publications_datasets.yml
@@ -2,7 +2,7 @@
   year: 2021
   title: "Data from: Climate change risks to push one-third of global food production outside Safe Climatic Space"
   repository: Zenodo Digital Repository
-  doi: doi/10.5281/zenodo.4700860
+  doi: 10.5281/zenodo.4700860
   openaccess: Y
   new: Y
 
